@@ -19,6 +19,7 @@ Bug Fixes
 
 * Fix issue 214: VOILUTSequence is not returned in Wado-RS
 * Fix /tools/reset crashing when ExtraMainDicomTags were defined
+* Fix Housekeeper plugin infinite loop if Orthanc is empty.
 
 
 Version 1.11.3 (2023-02-03)
